Fix z-indexes

--- a/how-it-works/how-it-works.scss
+++ b/how-it-works/how-it-works.scss
@@ -48,7 +48,7 @@ html {
 		left: 0;
 		// transform: translateX(-50%);
 		background: rgba(0, 0, 0, 0.3);
-		z-index: 999;
+		z-index: 300;
 		margin: 0;
 	}
 }
